tests/lean/625.lean.expected.out
625.lean:7:25-7:36: error: unknown constant 'foo'
foo x
foo.{1} x
